<resources>
    <string name="app_name">QuelPrixImmo</string>

    --Global
    <string name="search">Rechercher</string>

    --Search
    <string name="home">Maison</string>
    <string name="appt">Appartement</string>
    <string name="titleSearch">Recherche de bien</string>
    <string name="typeSearch">Type de bien</string>
    <string name="nbSearch">Nombre de pièces</string>
    <string name="nbSearchHint">Exemple : 4</string>
    <string name="nbSearchHintMax">Exemple : 5</string>
    <string name="pref">Préférences</string>
    <string name="piecesMinStr">Minimum : </string>
    <string name="piecesMaxStr">Maximum : </string>
    <string-array name="rangeSliderValues">
        <item>1</item>
        <item>15</item>
    </string-array>

    --Preferences
    <string name="valid">Valider</string>
    <string name="enterDist">Portée de la recherche</string>

</resources>